Atualzando Navbar e paginas

--- a/public/components/headernav.html
+++ b/public/components/headernav.html
@@ -8,10 +8,10 @@
             </div>
             <ul class="nav-links">
                 <li><a href="/index.html">Inicio</a></li>
-                <li><a href="/public/produtos.html">Produtos</a></li>
-                <li><a href="/public/carrinho.html">Carrinho</a></li>
-                <li><a href="/public/contato.html">Contato</a></li>
-                <li><a href="/public/sobre-nos.html">Sobre-nós</a></li>
+                <li><a href="/public/ofertas.html">Ofertas</a></li>
+                <li><a href="/public/xbox.html">Xbox</a></li>
+                <li><a href="/public/psn.html">PSN</a></li>
+                <li><a href="/public/PC.html">PC</a></li>
             </ul>
 
         </div>  
