--- a/css/navbar.css
+++ b/css/navbar.css
@@ -5,7 +5,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-right: 3rem;
+    margin-right: 70px;
 }
 
 .logo {
