--- a/public/components/footer.html
+++ b/public/components/footer.html
@@ -5,15 +5,15 @@
         <div class="footer-logo">GX-Gaming</div>
 
         <nav class="footer-nav">
-            <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Services</a>
-            <a href="#">Contact</a>
+            <a href="#">Inicio</a>
+            <a href="#">Sobre</a>
+            <a href="#">Serviços</a>
+            <a href="#">Contato</a>
         </nav>
 
     </div>
 
     <div class="footer-copyright">
-        &copy; 2024 GX-Gaming. All rights reserved.
+        &copy; 2024 GX-Gaming. Todos os Direitos reservados.
     </div>
 </footer>
