--- a/css/style.css
+++ b/css/style.css
@@ -7,20 +7,21 @@
     text-decoration: none;
 }
 
-html{
-    position: relative;
-    min-height: 100%;
+html, body {
+    height: 100%;
+    margin: 0;
 }
+
+
 body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
     margin: 0;
     padding: 0;
     font-family: 'VT323', monospace;
     background: linear-gradient(to right, #ff6ad5, #c774e8, #ad8cff);
 }
-
-
-
-
 
 form input{
     background-color: aliceblue;
@@ -43,18 +44,6 @@ input.botao:hover{
     background-color: blue;
     color:white;
 }
-
-
-main{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100vw;
-    height: 80vh;
-    line-height: 3;
-
-}
-
 
 button{
     background-color: red;
