--- a/css/main.css
+++ b/css/main.css
@@ -68,5 +68,16 @@ border: 1px solid whitesmoke;
     font-size: 1rem;
 }
 
+#btnselecionar{
+    background-color: green;
+    color:white;
+    padding: 10px ;
+    font-weight: bold;
+    border-radius: 10px;
+    font-size:10px;
+    border-bottom: 320px;
+    display: block;
+}
+
 
 
