--- a/css/style.css
+++ b/css/style.css
@@ -45,14 +45,14 @@ input.botao:hover{
     color:white;
 }
 
-button{
+.buttons{
     background-color: red;
     color:white;
-    padding: 10px 30px;
     font-weight: bold;
     border-radius: 10px;
     font-size:10px;
-    border-bottom: 320px;
+    margin: 0 auto;
+    display: block;
 }
 
 
