--- a/css/footer.css
+++ b/css/footer.css
@@ -3,8 +3,10 @@
 
 footer{
     width: 100%; /* Certifica-se de que o footer ocupe toda a largura */
-    position: relative; /* Remove o sticky */
+    position: sticky; /* Remove o sticky */
     text-align: center;
+    bottom: 0;
+    left: 0;
 }
 
 
@@ -13,7 +15,6 @@ footer{
     color: #00ffff;
     padding: 2rem 1rem;
     font-family: 'VT323', monospace;
-    position:sticky;
     bottom: 0;
 }
 
