--- a/css/main.css
+++ b/css/main.css
@@ -19,10 +19,8 @@ main {
     padding-right: 20px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
     overflow: hidden; /* Esconde as divs que ultrapassam o tamanho da div pai */
     white-space: nowrap; /* Impede a quebra das divs para a linha de baixo */
-    align-items: center;
 
 }
 
@@ -39,13 +37,12 @@ main {
 }
 
 .card {
+    color: black;
     border: 2px solid black;
     max-height: 100%;
-    max-width: 100%;
     width: 400px; /* Defina a largura dos cards */
     height: 350px; /* Defina a altura dos cards */
     margin: 10px; /* Espaçamento entre os cards */
-    background-color: yellow; /* Cor de fundo para os cards */
     line-height: 300px; /* Centraliza o texto verticalmente  Impede o redimensionamento e mantém o tamanho fixo */
 }
 
@@ -54,12 +51,29 @@ main {
     max-width: 100%;
     height: 60vh;
     max-height: 70%;
+    display: flex;
+
 
 }
 
-.cardFooter{
+.cardFooter {
     border: 1px solid black;
-    max-width: 100%;
-    height: 60vh;
-    max-height: 30%;
+    width: 100%;
+    height: 30%; /* Use porcentagem para consistência com o contêiner pai */
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Alinha verticalmente */
+    justify-content: center; /* Alinha horizontalmente */
+   
 }
+
+
+.swiper-slide:first-child {
+    margin-left: 30px; /* Ajuste o valor conforme necessário */
+}
+
+.responsive-image {
+    width: 100%;
+  height: 100%;
+  object-fit: fill; /* ou 'contain', 'fill', 'scale-down' */
+  }
