Alterações css , e sql do BD nao tem relacao com o site

--- a/css/main.css
+++ b/css/main.css
@@ -77,3 +77,9 @@ main {
   height: 100%;
   object-fit: fill; /* ou 'contain', 'fill', 'scale-down' */
   }
+
+.swiper-slide{
+    display: flex;
+    flex-wrap: wrap;
+    overflow: hidden;
+}
