--- a/css/footer.css
+++ b/css/footer.css
@@ -3,7 +3,7 @@
 
 footer{
     width: 100%; /* Certifica-se de que o footer ocupe toda a largura */
-    position: sticky; /* Remove o sticky */
+    position: fixed; 
     text-align: center;
     bottom: 0;
     left: 0;
