iniciando carrinho de compras html

--- a/public/components/headernav.html
+++ b/public/components/headernav.html
@@ -3,18 +3,21 @@
     <nav>
             
         <div class="nav-links">
+            
             <div class="logo">
                 <img src="/images/GXLogo.jpg" alt="Logo GX">
             </div>
+
             <ul class="nav-links">
                 <li><a href="/index.html">Inicio</a></li>
                 <li><a href="/public/ofertas.html">Ofertas</a></li>
                 <li><a href="/public/xbox.html">Xbox</a></li>
                 <li><a href="/public/psn.html">PSN</a></li>
                 <li><a href="/public/PC.html">PC</a></li>
+                <li><i class="fa-solid fa-cart-shopping vaporwave-icon"></i></li>
             </ul>
-
+           
         </div>  
 
     </nav>
-</header>
+  </header>
