--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@
 
 } */
 main{
-    margin-top: 100px;
+    /* margin-top: 100px; */
     min-height: calc(100vh - 200px); /* Subtraia a altura do footer */
     padding-bottom: 2rem; /* Adicione um padding para dar espaço ao footer */
 }
