--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
 
 
-
-
+#header {
+    margin-bottom: 100px;
+}
 
 .nav-links {
     display: flex;
