--- a/css/carrinho.css
+++ b/css/carrinho.css
@@ -9,27 +9,29 @@ flex-direction: row;
 width: 400px;
 height: 600px;
 background-color: rgb(201, 115, 115);
-margin-top: -100px;
+margin-top: 105px;
+}
+.carrinhoHeader{
+    width: 90%;
+    height: 10%;
 }
 
-.cartHead{
-    display: flex;
-    flex-direction: column;
+.carrinhoFooter{
+    width: 90%;
+    height: 10%;
 }
 
-.cartItens{
+.item {
     display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
+    flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
+    height: 150px;
+    background-color: aqua;
+    margin: 10px;
+    border-radius: 30px;
 }
 
-.imgItem{
-    display: flex;
-    margin: 0px auto;
-    border-radius: 20px;
-    padding: 10px 10px 0px 10px;
-    width: 40px;
-    height: 40px;
+.item img {
+    width: 80px;
 }
