script.js para criar cards dinamicamente, scripts para adicionar cards no localstorage funcionando , falta efletir isso na lista no front end

--- a/css/carrinho.css
+++ b/css/carrinho.css
@@ -3,6 +3,16 @@
     justify-content: flex-end;
 }
 
+#carrinhoDireita {
+    visibility: hidden;
+    display: flex;
+    }
+  
+    #carrinhoDireita.visible {
+      visibility: visible;
+      display: flex;
+    }
+
 #containerCarrinho{
 position: fixed;
 flex-direction: row; 
