--- a/public/components/headernav.html
+++ b/public/components/headernav.html
@@ -14,7 +14,7 @@
                 <li><a href="/public/xbox.html">Xbox</a></li>
                 <li><a href="/public/psn.html">PSN</a></li>
                 <li><a href="/public/PC.html">PC</a></li>
-                <li><i class="fa-solid fa-cart-shopping vaporwave-icon"></i></li>
+                <li><i onclick="toggleCartVisibility()" class="fa-solid fa-cart-shopping vaporwave-icon"></i></li>
             </ul>
            
         </div>  
