--- a/css/main.css
+++ b/css/main.css
@@ -26,9 +26,9 @@
 main{
     display: flex;
     flex-direction: column;
-    min-height: calc(100vh - 200px); /* Subtraia a altura do footer */
+    /*min-height: calc(100vh - 200px); */ /*  Subtraia a altura do footer */
     padding-bottom: 2rem; /* Adicione um padding para dar espaço ao footer */
-    margin-top: 200px;
+    margin-top: 105.3px;
 }
 
 .container, .container2{
@@ -123,7 +123,7 @@ main{
 .nomeJogo{
     display: flex;
     justify-content: start;
-    align-items: center;
+    align-items: start;
     width: 100%;
 }
 .nomeJogo p{
