--- a/public/components/headernav.html
+++ b/public/components/headernav.html
@@ -13,7 +13,7 @@
                 <li><a href="/public/ofertas.html">Ofertas</a></li>
                 <li><a href="/public/xbox.html">Xbox</a></li>
                 <li><a href="/public/psn.html">PSN</a></li>
-                <li><a href="/public/PC.html">PC</a></li>
+                <li><a href="/public/PC.html">Steam</a></li>
                 <li><i class="fa-solid fa-cart-shopping vaporwave-icon" onclick="toggleCartVisibility()" ></i></li>
             </ul>
            
