--- a/public/components/headernav.html
+++ b/public/components/headernav.html
@@ -8,13 +8,21 @@
                 <img src="/images/GXLogo.jpg" alt="Logo GX">
             </div>
 
-            <ul class="nav-links">
+            <!-- Ícone do menu hambúrguer -->
+        <div class="hamburguer" onclick="hamburger()">
+            <i class="fas fa-bars"></i> <!-- Ícone do hambúrguer -->
+        </div>
+              
+            
+            <ul class="nav-menu">
+               
                 <li><a href="/index.html">Inicio</a></li>
-                <li><a href="/public/ofertas.html">Ofertas</a></li>
-                <li><a href="/public/xbox.html">Xbox</a></li>
-                <li><a href="/public/psn.html">PSN</a></li>
-                <li><a href="/public/PC.html">Steam</a></li>
+                <li><a href="/ofertas.html">Ofertas</a></li>
+                <li><a href="/xbox.html">Xbox</a></li>
+                <li><a href="/psn.html">PSN</a></li>
+                <li><a href="/PC.html">Steam</a></li>
                 <li><i class="fa-solid fa-cart-shopping vaporwave-icon" onclick="toggleCartVisibility()" ></i></li>
+
             </ul>
            
         </div>  
