--- a/public/components/headernav.html
+++ b/public/components/headernav.html
@@ -21,7 +21,10 @@
                 <li><a href="/xbox.html">Xbox</a></li>
                 <li><a href="/psn.html">PSN</a></li>
                 <li><a href="/PC.html">Steam</a></li>
-                <li><i class="fa-solid fa-cart-shopping vaporwave-icon" onclick="toggleCartVisibility()" ></i></li>
+                <li>
+                    <i class="fa-solid fa-cart-shopping vaporwave-icon" onclick="toggleCartVisibility()" ></i>
+                    <span id="item-count" class="cart-count" style="font-size: 1.5rem;">0</span> <!-- Contador de itens -->
+                </li>
 
             </ul>
            
